# prismulti

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  tmp.dot
.github/workflows/: ci.yml
benches/: benchmarks.py  dtmc_benches.rs  hyperfine_bench.py
docs/: dd_usage.md  dtmc_details.md  manual.typ  mdp_details.md
profiling/: perf_profile.py
src/: analyze.rs  ast.rs  constr_symbolic.rs  dd.rs  dd_manager.rs  lib.rs  main.rs  parser.rs  prompt.md  reachability.rs  ref_manager.rs  sym_check.rs  symbolic_dtmc.rs
src/dd_manager/: dd.rs  protected_local.rs  protected_slot.rs
src/parser/: parser.lalrpop
src/ref_manager/: local_roots_guard.rs  protected_slot.rs
tests/: dtmc_sym_check_tests.rs  dtmc_sym_constr_tests.rs  mdp_parser_tests.rs  parser_consts_tests.rs  parser_tests.rs
tests/dtmc/: knuth_die.prop  knuth_two_dice.prop
