[package]
name = "prism-rs"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.23.1"

[features]
default = ["build-cudd"]
build-cudd = ["cudd-sys/build_cudd"]

[dependencies]
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
clap = { version = "4.6.0", features = ["derive"] }
cudd-sys = { version = "1.1.2-alpha.2", default-features = false }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[patch.crates-io]
cudd-sys = { path = "vendor/cudd-sys" }

[profile.release]
debug = true
strip = "none"
