[package]
name = "prismulti"
version = "0.1.0"
edition = "2024"
description = "A multi-threaded Rust implementation of a subset of the PRISM model checker."
license = "MIT"
repository = "https://github.com/BrandonTang89/prismulti"
readme = "README.md"
keywords = [
    "model-checking",
    "symbolic",
    "verification",
    "probabilistic",
    "decision-diagrams",
]
categories = ["science", "algorithms", "concurrency"]

[build-dependencies]
lalrpop = "0.23.1"

[features]
default = ["build-sylvan"]
build-sylvan = ["sylvan-sys/build_sylvan"]

[dependencies]
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
clap = { version = "4.6.0", features = ["derive"] }
sylvan-sys = { version = "1.1.0", default-features = false }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "dtmc_benches"
harness = false

[profile.release]
debug = true
strip = "none"
